--- a/WebSocket/src/main/resources/static/index.html
+++ b/WebSocket/src/main/resources/static/index.html
@@ -18,6 +18,7 @@
 </textarea>
 <br/>
 <input type="text" id="message"/>
+<input type="text" id="userId" hidden="hidden"/>
 <input type="button" value="send" name="send" onclick="sendMessage()"/>
 <br/>
 <dev id = "friendsList" style="width: 50px; height: 100px">
