--- a/IdiomSequence/src/main/resources/web/index.html
+++ b/IdiomSequence/src/main/resources/web/index.html
@@ -7,6 +7,7 @@
         <meta charset="UTF-8">
     </head>
     <body>
+        <div id="tips">输入首字拼音全拼</div>
         <input type="text" id="pinyin">
         <div id="result"></div>
     </body>
